<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2020 Braden Farmer

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">AppNotifier</string>
    <string name="app_name_debug">AppNotifier (Debug)</string>

    <plurals name="apps_updated_header">
        <item quantity="one">%d app updated</item>
        <item quantity="other">%d apps updated</item>
    </plurals>

    <plurals name="apps_updated_footer">
        <item quantity="one">%d other</item>
        <item quantity="other">%d others</item>
    </plurals>

    <string name="apps_updated_1">%s</string>
    <string name="apps_updated_2">%1$s and %2$s</string>
    <string name="apps_updated_3">%1$s, %2$s, and %3$s</string>
    <string name="apps_updated_4">%1$s, %2$s, %3$s, and %4$s</string>
    <string name="apps_updated_other">%1$s, %2$s, %3$s, %4$s, and %5$s</string>

    <string name="app_updates">App updates</string>
    <string name="app_installs">App installs</string>
    <string name="foreground_service">Foreground service</string>

    <string name="listening_for_app_updates_header">Listening for app installs &amp; updates</string>
    <string name="listening_for_app_updates_content">Feel free to turn this notification off by clicking here. Notifications will still appear for your app installs and updates.</string>

    <string name="successfully_installed">Successfully installed</string>

    <string name="notification_types">Show me notifications for&#8230;</string>
    <string name="notify_installs">New application installs</string>
    <string name="notify_updates">Updates to existing applications</string>

    <string name="update_sources">&#8230;when I install or update apps from</string>
    <string name="notify_play_store">Google Play Store</string>
    <string name="notify_other_sources">Other sources (sideloaded)</string>

    <string name="about_header">About AppNotifier</string>
    <string name="about_content">AppNotifier restores Google Play\'s missing app update &amp; app install notifications.\n\n&#169; %d Braden Farmer\n\nClick here to check for updates or leave a rating!</string>

    <string name="additional_settings">Additional settings</string>
    <string name="battery_optimization_title">Ignore battery optimizations</string>
    <string name="battery_optimization_summary">May be needed if notifications don\'t appear consistently</string>
    <string name="notification_text_style">Notification text style</string>
    <string name="app_not_available">App not available for this action</string>

    <string-array name="notification_text_style_entries">
        <item>Original (mimic Play Store)</item>
        <item>Enhanced (show more detail)</item>
    </string-array>

</resources>
